Project

General

Profile

Actions

Bug #20803

closed

ceph tell osd.N config set osd_max_backfill does not work

Added by Sage Weil over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

root@eutow:~# ceph daemon osd.33 dump_reservations
...
        "max_allowed": 1,
...
root@eutow:~# ceph tell osd.33 injectargs '--osd-max-backfills 10'
osd_max_backfills = '10' rocksdb_separate_wal_dir = 'false' (not observed, change may require restart) 
root@eutow:~# ceph daemon osd.33 dump_reservations
{
    "local_reservations": {
        "max_allowed": 10,
...
root@eutow:~# ceph tell osd.33 config set osd_max_backfills 9
Set osd_max_backfills to 9
root@eutow:~# ceph daemon osd.33 dump_reservations
{
    "local_reservations": {
        "max_allowed": 10,
...

not sure if this is specific to this particular setting, or a general problem with 'ceph tell <daemon> config set <thing> <val>'.
Actions #1

Updated by Sage Weil over 6 years ago

  • Description updated (diff)
Actions #2

Updated by John Spray over 6 years ago

  • Status changed from 12 to In Progress
  • Assignee set to John Spray

OK, looks like this is setting the option (visible in "config show") but not calling the handlers properly (not reflected in the dump_reservations).

Actions #3

Updated by John Spray over 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #4

Updated by Sage Weil over 6 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF