osd/mon/mds: fix `config set` tell command

This was working for setting values, but failing to call
the config observers, so some values didn't take effect.

Fixes: http://tracker.ceph.com/issues/20803
Signed-off-by: John Spray <john.spray@redhat.com>